--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    They will slowly move toward your cursor
+		    They will slowly move toward your cursor. Big guys eat little guys
 	    </footer>
 	</body>
 </html>
