--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 	</head>
 	<body>
 		<header>
-			<h1>Click and drag to control</h1>
+			<h1> Click and drag to control. They also like your cursor a little.</h1>
 		</header>
 			<section id="content">
 				<canvas id="Chemotaxis" data-processing-sources="Chemotaxis.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    They will slowly move toward your cursor. Big guys eat little guys
+		   It's a dog eat dog world. The Big guys eat the little guys. Who will eat, and who will be eaten?
+		   You decide
 	    </footer>
 	</body>
 </html>
