--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		    </section>
 	    <footer>
 		   It's a dog eat dog world. The Big guys eat the little guys. Who will eat, and who will be eaten?
-		   You decide
+		   You decide.
 	    </footer>
 	</body>
 </html>
