--- a/index.html
+++ b/index.html
@@ -8,15 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1> Slowly click and drag to control. They also like your cursor a little.</h1>
+			<h1> They like your cursor a little.</h1>
 		</header>
 			<section id="content">
 				<canvas id="Chemotaxis" data-processing-sources="Chemotaxis.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		   It's a dog eat dog world. The Big guys eat the little guys. Who will eat, and who will be eaten?
-		   You decide.
+		   It's a dog eat dog world. The Big guys eat the little guys.
 	    </footer>
 	</body>
 </html>
